2014-07-05  Araki Ken  <arakiken@users.sf.net>

	* mlclient/main.c: Minor fixes.

	* main_loop.c: --deffont option is added.

	* README.ja, mlterm.1: Updated.

	* ml_bidi.c: U+2500-259f and DEC_SPECIAL characters are forcibly regarded as bidi
	  separator ones.

	* ml_term.c: kik_str_unescape(bidi_separators) is called.

	* ml_screen.c: kik_str_unescape(word_separators) is called.

2014-06-30  Araki Ken  <arakiken@users.sf.net>

	* ml_pty.[ch], ml_pty_inter.h, ml_pty_unix.c, ml_term.[ch], x_main_config.[ch],
	  x_screen_manager.c:
	  chdir(work_dir) if --work-directory option is specified.

	* mlterm.1, mlclient.1, README.ja, PROTOCOL, etc/main, etc/main.ja: Updated.

2014-06-29  Araki Ken  <arakiken@users.sf.net>

	* ml_bidi.c: Minor fixes.

2014-06-28  Araki Ken  <arakiken@users.sf.net>

	* x_main_config.c, x_screen.c: ml_set_bidi_separators() is changed to
	  ml_term_{get|set}_bidi_separators().

	* ml_term.[ch], ml_term_manager.[ch], x_screen_manager.c:
	  - bidi_separators variable is changed from static to the member of ml_term_t.
	  - ml_term_{get|set}_bidi_separators() are added.
	  - ml_set_bidi_separators() is removed.

	* vte.c, MLTermpty.c: Arguments of ml_create_term() is fixed.

	* ml_vt100_parser.[ch]: Minor fixes.

2014-06-28  Araki Ken  <arakiken@users.sf.net>

	* mlterm.1, README.ja: Updated.

	* libctl/ml_bidi.[ch], ml_line_bidi.[ch], ml_logical_visual_bidi.c,
	  mlterm/ml_bidi.[ch], ml_logical_visual.[ch], ml_term.[ch], x_screen.c,
	  x_main_config.c:
	  - bidi_separator option is added.
	  - "left" and "right" are available as the value of bidi_mode option.

	* libptyssh/ml_pty_ssh.c: Unread data in loopback pty isn't discarded.

	* mc_io.c: HOEMPATH environmental variable is used instead of HOME in win32.

2014-06-24  Araki Ken  <arakiken@users.sf.net>

	* x_draw_str.c: If ml_char_is_visible() is false, text is not drawn.

	* ml_char.[ch]:
	  - IS_CONCEALED => IS_VISIBLE
	  - ml_char_is_visible() is added.
